[tool.poetry]
name = "kadena"
version = "0.1.0"
description = "tools and goodies for kadena"
authors = ["banteg <banteeg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
